postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: bitwarden
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
